test dark mode fix

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -37,88 +37,88 @@ h6 {
   color: var(--text-color)
 }
 
-.vp-feature-item {
-  position: relative;
+// .vp-feature-item {
+//   position: relative;
 
-  box-shadow: 0 1.5px 3px 0 #00000026;
-  border: 2px solid var(--ifm-color-emphasis-200);
+//   box-shadow: 0 1.5px 3px 0 #00000026;
+//   border: 2px solid var(--ifm-color-emphasis-200);
 
-  display: block;
-  flex-basis: calc(33% - 3rem);
+//   display: block;
+//   flex-basis: calc(33% - 3rem);
 
-  margin: 0.5rem;
-  padding: 1rem;
-  border-radius: 0.5rem;
+//   margin: 0.5rem;
+//   padding: 1rem;
+//   border-radius: 0.5rem;
 
-  color: inherit;
+//   color: inherit;
 
-  transition:
-    background var(--color-transition),
-    box-shadow var(--color-transition),
-    transform var(--transform-transition);
+//   transition:
+//     background var(--color-transition),
+//     box-shadow var(--color-transition),
+//     transform var(--transform-transition);
 
-  @media (min-width: hope-config.$pc) {
-    flex-basis: calc(25% - 3rem);
-  }
+//   @media (min-width: hope-config.$pc) {
+//     flex-basis: calc(25% - 3rem);
+//   }
 
-  @media (max-width: hope-config.$pad) {
-    flex-basis: calc(50% - 3rem);
-  }
+//   @media (max-width: hope-config.$pad) {
+//     flex-basis: calc(50% - 3rem);
+//   }
 
-  @media (max-width: hope-config.$tablet) {
-    flex-basis: 100%;
-    font-size: 0.95rem;
-  }
+//   @media (max-width: hope-config.$tablet) {
+//     flex-basis: 100%;
+//     font-size: 0.95rem;
+//   }
 
-  @media (max-width: hope-config.$mobile) {
-    margin: 0.5rem 0;
-    font-size: 0.9rem;
-  }
+//   @media (max-width: hope-config.$mobile) {
+//     margin: 0.5rem 0;
+//     font-size: 0.9rem;
+//   }
 
-  &.link {
-    cursor: pointer;
+//   &.link {
+//     cursor: pointer;
 
-    @media print {
-      text-decoration: none;
-    }
-  }
+//     @media print {
+//       text-decoration: none;
+//     }
+//   }
 
-  .icon {
-    display: inline-block;
+//   .icon {
+//     display: inline-block;
 
-    width: 1.1em;
-    margin-inline-end: 0.5rem;
+//     width: 1.1em;
+//     margin-inline-end: 0.5rem;
 
-    color: var(--theme-color);
+//     color: var(--theme-color);
 
-    font-weight: normal;
-    font-size: 1.1em;
-  }
+//     font-weight: normal;
+//     font-size: 1.1em;
+//   }
 
-  &:hover {
-    background-color: var(--bg-color-secondary);
-    box-shadow: 0 2px 12px 0 var(--card-shadow);
-    transform: translate(-2px, -2px);
-    transform: scale(1.05);
+//   &:hover {
+//     background-color: var(--bg-color-secondary);
+//     box-shadow: 0 2px 12px 0 var(--card-shadow);
+//     transform: translate(-2px, -2px);
+//     transform: scale(1.05);
 
-    .vp-feature-bg + .vp-feature & {
-      background-color: transparent;
-    }
-  }
+//     .vp-feature-bg + .vp-feature & {
+//       background-color: transparent;
+//     }
+//   }
 
-  &:only-child {
-    flex-basis: 100%;
-  }
+//   &:only-child {
+//     flex-basis: 100%;
+//   }
 
-  &:first-child:nth-last-child(2),
-  &:nth-child(2):last-child {
-    flex-basis: calc(50% - 3rem);
+//   &:first-child:nth-last-child(2),
+//   &:nth-child(2):last-child {
+//     flex-basis: calc(50% - 3rem);
 
-    @media (max-width: hope-config.$tablet) {
-      flex-basis: 100%;
-    }
-  }
-}
+//     @media (max-width: hope-config.$tablet) {
+//       flex-basis: 100%;
+//     }
+//   }
+// }
 
 .theme-hope-content img {
   border: 1px solid #C0C0C0;
